--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-sdk android:minSdkVersion="7"/>
     <application android:label="@string/app_name" >
         <activity android:name="MainActivity"
+                  android:theme="@style/Theme.PageIndicatorDefaults"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
